fix for java 11+